# kryptokrona-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/: DEPENDABOT.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
kryptokrona_common/: Cargo.toml  build.rs
kryptokrona_core/: Cargo.toml
kryptokrona_core/src/: lib.rs  thor.rs  wallet_backend.rs  wb.rs
kryptokrona_crypto/: Cargo.toml  build.rs
kryptokrona_wallet_api/: Cargo.toml
kryptokrona_wallet_api/src/: main.rs
kryptokrona_wallet_api/src/handler/: node_handler.rs
kryptokrona_wallet_rpc/: Cargo.toml  build.rs
kryptokrona_wallet_rpc/proto/: address.proto  node.proto  transaction.proto  wallet.proto
kryptokrona_wallet_rpc/src/: ffi.rs  main.rs
kryptokrona_wallet_rpc/src/handler/: address_handler.rs  node_handler.rs  transaction_handler.rs  wallet_handler.rs
src/: ascii.rs  ffi.rs  lib.rs  thor.rs  wallet_backend.rs
src/kryptokrona_common/src/: lib.rs
src/kryptokrona_core/src/: node.rs  wb.rs
src/kryptokrona_crypto/src/: ffi.rs
src/kryptokrona_wallet_api/: Cargo.toml
src/kryptokrona_wallet_api/src/handler/: node_handler.rs
