[package]
name = "kryptokrona"
version = "2.0.0"
edition = "2021"
authors = ["кuro <x40151@proton.me>"]
license = "BSD-3-Clause"
description = "A new and improved implementation of Kryptokrona in Rust."
documentation = "https://github.com/kryptokrona/kryptokrona-rs-rs"
homepage = "https://github.com/kryptokrona/kryptokrona-rs"
repository = "https://github.com/kryptokrona/kryptokrona-rs.git"
rust-version = "1.78.0"

[dependencies]
cc = "1.0.90"
libc = "0.2.153"
# aes
# skein
# groestl
# keccak
# jh

[build-dependencies]
cc = "1.0"
