[package]
name = "kryptokrona_common"
version = "0.2.0"
edition = "2021"
authors = ["кuro <x40151@proton.me>"]
license = "BSD-3-Clause"
description = "Common library in Rust."
documentation = "https://github.com/kryptokrona/kryptokrona-rs"
homepage = "https://github.com/kryptokrona/kryptokrona-rs"
repository = "https://github.com/kryptokrona/kryptokrona-rs.git"
rust-version = "1.78.0"

[dependencies]
cc = "1.0.90"

[build-dependencies]
cc = "1.0.90"
