[package]
name = "kryptokrona_core"
version = "0.2.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
license = "BSD-3-Clause"
description = "Core implementation in Rust."
documentation = "https://github.com/kryptokrona/kryptokrona-rs"
homepage = "https://github.com/kryptokrona/kryptokrona-rs"
repository = "https://github.com/kryptokrona/kryptokrona-rs.git"
rust-version = "1.78.0"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "kryptokrona_core"
crate-type = ["staticlib"]
