[package]
name = "kryptokrona_wallet_rpc"
version = "0.2.0"
edition = "2021"
authors = ["кuro <x40151@proton.me>"]
license = "BSD-3-Clause"
description = "Wallet RPC for Kryptokrona."
documentation = "https://github.com/kryptokrona/kryptokrona-rs"
homepage = "https://github.com/kryptokrona/kryptokrona-rs"
repository = "https://github.com/kryptokrona/kryptokrona-rs.git"
rust-version = "1.78.0"

[[bin]]
name = "kryptokrona_wallet_rpc"
path = "src/main.rs"

[dev-dependencies]
kryptokrona_core = { path = "../kryptokrona_core" }

[dependencies]
kryptokrona_core = { path = "../kryptokrona_core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
prost = "0.12.3"
prost-types = "0.12"
tracing = { version = "0.1" }
cc = "1.0.90"
libc = "0.2.153"

[build-dependencies]
tonic-build = "0.11"
